<resources>
    <string name="app_name">Trabajo Final</string>
    <string name="altaUsuario">Ir Alta Usuario</string>
    <string name="nombreaplicacion">Alta De Usuarios</string>
    <string name="botonvolver1">Volver</string>
    <string name="botonvolver2">Volver</string>
    <string name="irpantalla3">Enviar Datos Usuario</string>
    <string name="enviarvaloracion">Enviar Valoración</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="telefono">Teléfono:</string>
    <string name="email">Email:</string>
    <string name="direccion">Dirección:</string>
    <string name="sexo">Sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fechanacimiento">Fecha de nacimiento:</string>
    <string name="intereses">Intereses:</string>
    <string name="escribirNombre" />
    <string name="escribirApellidos" />
    <string name="escribirTelefono" />
    <string name="escribirEmail" />
    <string name="escribirDireccion" />
    <string name="escribirFechaNac" />
    <string name="interes1">PHP</string>
    <string name="interes2">Android</string>
    <string name="interes3">JavaScript</string>
    <string name="campoNombre" />
    <string name="campoApellidos" />
    <string name="campoTelefono" />
    <string name="campoEmail" />
    <string name="campoDireccion" />
    <string name="campoSexo" />
    <string name="campoFechaNac" />
    <string name="campoIntereses" />
    <string name="Nombre1">Nombre:</string>
    <string name="Apellidos1">Apellidos:</string>
    <string name="Telefono1">Número de Teléfono:</string>
    <string name="Email1">Email:</string>
    <string name="Direccion1">Dirección:</string>
    <string name="Sexo1">Sexo:</string>
    <string name="Fecha1">Fecha de Nacimiento:</string>
    <string name="Intereses1">Intereses:</string>
</resources>