<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPantalla2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="88dp"
        android:src="@drawable/logoproyectoandroid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoproyectoandroid"
        tools:srcCompat="@drawable/logoproyectoandroid" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="305dp"
        android:layout_height="88dp"
        android:background="@android:color/holo_blue_bright"
        android:paddingLeft="30dp"
        android:paddingTop="22dp"
        android:text="@string/nombreaplicacion"
        android:textColor="@android:color/background_dark"
        android:textSize="30dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="408dp"
        android:layout_height="37dp"
        android:onClick="volverPrincipal"
        android:text="@string/botonvolver1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="410dp"
        android:layout_height="39dp"
        android:onClick="irpantalla3"
        android:text="@string/irpantalla3"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="58dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="136dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/apellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewApellidos" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelefono" />

    <TextView
        android:id="@+id/textViewDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/sexo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDireccion" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="217dp"
        android:layout_height="93dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Direccion">

        <RadioButton
            android:id="@+id/hombre"
            android:layout_width="93dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/mujer"
            android:layout_width="87dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="40dp"
            android:text="@string/mujer" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/fechanacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    <TextView
        android:id="@+id/textViewIntereses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/intereses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaNac" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="234dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/escribirNombre"
        app:layout_constraintStart_toEndOf="@+id/textViewNombre"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Apellidos"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/escribirApellidos"
        app:layout_constraintStart_toEndOf="@+id/textViewApellidos"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/Telefono"
        android:layout_width="222dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/escribirTelefono"
        app:layout_constraintStart_toEndOf="@+id/textViewTelefono"
        app:layout_constraintTop_toBottomOf="@+id/Apellidos" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="253dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/escribirEmail"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/Telefono" />

    <EditText
        android:id="@+id/Direccion"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/escribirDireccion"
        app:layout_constraintStart_toEndOf="@+id/textViewDireccion"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/FechaNacimiento"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/escribirFechaNac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewFechaNac"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="218dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/interes1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/textViewIntereses"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaNac"
        app:layout_constraintVertical_bias="0.027" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="219dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/interes2"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintStart_toEndOf="@+id/textViewIntereses"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="216dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="104dp"
        android:text="@string/interes3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewIntereses"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />


</androidx.constraintlayout.widget.ConstraintLayout>